<resources>
    <string name="app_name">Amigos Da Vizinhanca</string>
    <string name="sign_up">Fazer cadastro</string>
    <string name="i_already_have_an_account">Já possuo conta</string>
    <string name="register">Cadastro</string>
    <string name="cpf">CPF</string>
    <string name="address">Endereço</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="sign_in">Fazer login</string>
    <string name="login">Login</string>
    <string name="upload_img">Nuvem cinza com seta branca ao centro simbolizando upload</string>
    <string name="publish_event">Publicar acontecimento</string>
    <string name="tell_what_happened">Conte o que aconteceu</string>
    <string name="show_what_happened">Mostre o que aconteceu</string>
    <string name="what_happened">O que aconteceu?</string>
    <string name="loginSigUpLink">Não tem cadastro? Clique aqui!</string>
    <string name="titleFeed">Feed da vizinhança</string>
    <string name="this_account_was_deleted">Esta conta foi deletada</string>
    <string name="attention">Atenção</string>
    <string name="you_really_want_to_leave">Você realmente deseja sair?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="you_cant_create_a_publication_without_text">Você não pode criar uma publicação sem texto!</string>
    <string name="ok">OK</string>
    <string name="incorrect_email_or_password">E-mail ou senha incorretos</string>
    <string name="the_name_needs_to_have_at_less_3_letras">O nome precisa ter ao menos 3 letras</string>
    <string name="this_cpf_is_already_registered">Esse CPF já está cadastrado</string>
    <string name="fill_the_cpf_correctly">Preencha o CPF corretamente</string>
    <string name="the_address_is_too_short">O endereço é muito curto</string>
    <string name="this_email_is_already_registered">Este e-mail já está cadastrado</string>
    <string name="the_email_is_not_valid">O e-mail não é válido</string>
    <string name="password_validation_rules">A senha precisa ter pelo menos 8 caracteres, um número e um caractere especial</string>
    <string name="registration_failed">Não foi possível realizar o cadastro. Por favor, tente novamente</string>
    <string name="new_post_button">Botão de nova postagem</string>
    <string name="image_post">Imagem de um post</string>
    <string name="no_published">Não foi possível publicar</string>
    <string name="we_need_permission">A permissão é necessária para carregar posts.</string>
</resources>