<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/postTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0C44AC"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:text="@string/tell_what_happened"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="50dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/postText"
                android:text="@string/what_happened"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/postText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#636262"
                android:ems="10"
                android:inputType="text"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:importantForAutofill="no"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/imageButton"
                android:text="@string/show_what_happened"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/upload_img"
                android:scaleX="1"
                android:scaleY="1"
                app:srcCompat="@drawable/upload" />

            <Button
                android:id="@+id/postButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#0C44AC"
                android:padding="16dp"
                android:text="@string/publish_event"
                android:textSize="20sp"
                app:cornerRadius="14dp"
                tools:ignore="VisualLintButtonSize"
                android:onClick="publishPost"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>