<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0C44AC"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="50dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/signUpName"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/signUpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#636262"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/signUpCPF"
                android:text="@string/cpf"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/signUpCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#636262"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/signUpAddress"
                android:text="@string/address"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/signUpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#636262"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/signUpEmail"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#636262"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@id/signUpPassword"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#636262"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#0C44AC"
                android:contentDescription="@string/sign_up"
                android:contextClickable="false"
                android:onClick="signUpBottonClick"
                android:padding="16dp"
                android:text="@string/sign_up"
                android:textSize="20sp"
                app:cornerRadius="14dp"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/signUpLoginLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/i_already_have_an_account"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>