<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0C44AC"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:inputType="textWebEmailAddress"
            android:labelFor="@id/loginEmail"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            tools:ignore="SpUsage,TextViewEdits,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#636262"
            android:ems="10"
            android:inputType="textWebEmailAddress"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:labelFor="@id/loginPassword"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#636262"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:importantForAutofill="no"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#0C44AC"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textSize="20sp"
            app:cornerRadius="14dp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/loginSigUpLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>